<resources>
    <string name="app_name">EasyWorker</string>
    <string name="easywork_is_a_company">EasyWork is a Company and HR system mobile app that can help SME and Entrepreneur to boost their office work efficiency and help them to save cost. How to start a company with EasyWork? Invite your colleagues / employees to join your company on EasyWork. More colleagues more fun and progressive. Let’s start to invite. Here is step by step guide on “Colleagues Invitation Guide”.</string>
    <string name="q3_how_does_the_rewerd_feature_work">Q3 How does the rewerd feature work?</string>
    <string name="rewerd_feature_on_easyworker">Rewards Feature on EasyWork allows you to reward your employees/team members with points as a recognition. Value of the each point is self determined by your company. Rewards feature allows you to allocate recurring points to your employees/team members to reward their peers. Click on this guide to learn how to Set, Give and Spend reward points.</string>
    <string name="will_my_subscription_be_auto_renewed">Q4 WILL MY SUBSCRIPTION BE AUTO RENEWED?</string>
    <string name="yes_all_subscription">Yes, all subscription will be auto renewed once the billing term is up.</string>
    <string name="q2_how_do_i_invite_colleagues_to_join_easyworker">Q2 How do i invite colleagues to join EasyWorker?</string>
    <string name="a_easyworker_referr_program">A easy worker referal code ( or referal tracking code) is a unique combination of numbers and letters used to identify the participants in a easy worker referal program</string>
    <string name="q1_what_is_a_easy_worker_referal_program">Q1 What is a Easy worker referal program ?</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="friend_referral_code">Friend Referral Code</string>
    <string name="avail_referral_discount">AVAIL REFERRAL DISCOUNT</string>
    <string name="divider">---------------------------------------------------------------------------------------------</string>
    <string name="your_earn_point">Your Earn Point</string>
    <string name="you_have_not_placed_any_orders_yet">You have not placed any orders yet</string>
    <string name="browse_services">BROWSE SERVICES</string>
    <string name="faqs">FAQs</string>
    <string name="how_can_we_help_you">How can we help you</string>
    <string name="all_topic">All topics</string>
    <string name="account">Account</string>
    <string name="getting_start">Getting Started with EasyWorker</string>
    <string name="payments">Payments &amp; EasyWorker Credits </string>
    <string name="membership_easyworker">EasyWorker Plus Membership</string>
    <string name="easy_worker_safety">EasyWorker Safety</string>
    <string name="change_my_phone_no">I want to change my phone number</string>
    <string name="saved_address">Where can i check my saved address</string>
    <string name="change_my_email">I want to change my email address</string>
    <string name="phone_number_change_details">You can change your phone number from profile section after verifying it with an OTP</string>
    <string name="saved_address_detail">You can check your saved addresses using the following ways:</string>
    <string name="saved_address_detail_no1">1. While selecting the location on the app home screen</string>
    <string name="saved_address_detail_no2">2. Check address on the checkout screen before making payment</string>
    <string name="saved_address_detail_alternatively">Alternatively, you can also click on the below link to check all saved addresses:</string>
    <string name="change_my_email_details">You can change your email address from the profile section after verifying with an OTP</string>
    <string name="i_see_my_saved_payment">Where can i see my saved payment details?</string>
    <string name="i_see_payment_details">You can check all your saved payment details by clicking the below button.</string>
    <string name="i_see_payment_details_second_text">If you wish to remove any saved payment details, you can either <b>unlike</b> wallet account or <b>delete</b> the saved cards.</string>
    <string name="about_us"><b>About us</b></string>
    <string name="what_is_easy_worker">What is EasyWorker?</string>
    <string name="booking"><b>Bookings</b></string>
    <string name="place_a_booking">How to place a booking?</string>
    <string name="can_i_rebook_the_same">Can I re-book the same professional if i like their service?</string>
    <string name="preferred_professional">How to book my preferred professional?</string>
    <string name="minimum_value_of_service">Do I have to order a minimum value of service before I can place the booking</string>
    <string name="change_any_cancellation_fees">Does EasyWorker charge any cancellation fees?</string>
    <string name="place_a_booking_details">You can follow the below steps to book a service on app:</string>
    <string name="place_a_booking_detail_no1">1. Search for the service on the home screen for the category you are looking for.</string>
    <string name="place_a_booking_detail_no2">2. Open the category and follow the instructions as you proceed ahead.</string>
    <string name="place_a_booking_detail_no3">3. Once you have booked a service, wait for the professional to get assigned. Professional will be assigned 1 hour prior to your booking time.</string>
    <string name="place_a_booking_detail_no4">4. Assigned professional will reach your address at the time of the booking and will deliver the service</string>
    <string name="can_i_rebook_the_same_ans">Yes if you rate their service with five stars, you will get an option to re-book with the same professional the next time you book. Click on their profile and secure their slots.</string>
    <string name="preferred_professional_ans">If you have already taken the service &amp; rated the professional above 4 stars, You can book your preferred professional by:</string>
    <string name="preferred_professional_ans_1">1. Adding services in your cart</string>
    <string name="preferred_professional_ans_2">2. Selecting your preferred professional from the list of professionals</string>
    <string name="preferred_professional_ans_3">3. Proceed with placing the booking</string>
    <string name="preferred_professional_ans_4">If the slots of your preferred professionals are not available, please proceed with placing the booking and we will try to assign you the best professional available. All our professionals are training to deliver a high quality experience.</string>
    <string name="minimum_value_of_service_ans1">To ensure efficient use of our professional\'s time, there are minimum order requirements for each category</string>
    <string name="minimum_value_of_service_ans2">If the services you\'ve selected does noy meet the minimum order requirement, you will be prompted to add more services before you can proceed to checkout.</string>
    <string name="change_any_cancellation_fees_ans">Cancellation fee is charged only if a professional is assigned on your booking and the time of cancellation is closer to your booking time. This is done to fairly compensate our professionals for their time and the cost of travel while travelling to your place.</string>
    <string name="change_any_cancellation_fees_ans_2">Exact cancellation amount will be shown while your proceed with a cancellation request.</string>
    <string name="how_do_i_check_my_wallet">How do i check my wallet balance?</string>
    <string name="how_do_i_use_my_credit">How do i use my EasyWorker credits?</string>
    <string name="i_extend_the_validity">Can I extends the validity of the rewards?</string>
    <string name="how_does_referral">How does referral work?</string>
    <string name="i_have_not_received_reweard">I have not received a reward for referral</string>
    <string name="where_can_i_see_saved_payment">Where can I see my saved payment details?</string>
    <string name="how_do_i_check_my_wallet_ans">You can check you wallet balance from balance from your profile section->My wallet.</string>
    <string name="to_check_wallet_history">To Check you wallet history</string>
    <string name="how_do_i_use_my_credit_ans1">Usage of EasyWorker credits applies to specific services</string>
    <string name="how_do_i_use_my_credit_ans2">For more details you may check by accessing our mobile app > profile > my wallet.</string>
    <string name="how_do_i_use_my_credit_ans3">Activate the usages of your credits at the cart summary page before checking out!</string>
    <string name="i_extend_the_validity_ans">No, the validity of the rewards or EasyWorker credits cannot be extended. Please use the credits before their validity expire</string>
    <string name="how_does_referral_ans">To be eligible for the referral reward, you have to fulfil the below requirements:</string>
    <string name="how_does_referral_ans_1">1. Your friend must be a first-time user of EasyWorker Company</string>
    <string name="how_does_referral_ans_2">2. Download our mobile app and register via your referral link</string>
    <string name="how_does_referral_ans_3">3. Account details must have a verified mobile number</string>
    <string name="how_does_referral_ans_4">Once your friend takes service with us, they will get instant 100Rs off and ypu can win upto 5000Rs in rewards.</string>
    <string name="i_have_not_received_reweard_ans">You are eligible for referral reward when:</string>
    <string name="i_have_not_received_reweard_ans1">1. You referral is first-time user on EasyWorker app</string>
    <string name="i_have_not_received_reweard_ans2">2. They have successfully availed at least 1 service from us</string>
    <string name="i_have_not_received_reweard_ans3">Your reward will be credited within 24 hours of service delivery.</string>
    <string name="where_can_i_see_saved_payment_ans1">You can check all your saved payment details by clicking the below button.</string>
    <string name="where_can_i_see_saved_payment_ans2">If you wish to remove any saved payment details, you can either unlike wallet account or delete the saved cards.</string>
    <string name="purchase">Purchase</string>
    <string name="benefits_of_the_membership">What are the benefits of the memberships?</string>
    <string name="maximum_discount_that_i_can_get_by_using">What is the maximum discount that i can get by using EasyWorker plus?</string>
    <string name="_money_back_gurantee">How does the 100% money-back grantee work?</string>
    <string name="how_i_buy_membership">How do I buy the membership?</string>
    <string name="can_i_pay_for_membership_with_cash">Can I pay for membership with cash on delivery?</string>
    <string name="can_i_share_membership_with_family">Can I share membership with family?</string>
    <string name="modification">Modification</string>
    <string name="i_cancel_my_membership">How do i cancel my membership plan?</string>
    <string name="can_i_pause_my_membership">Can I pause my membership?</string>
    <string name="change_phone_number">Change phone number</string>
    <string name="my_addresses">My Addresses</string>
    <string name="change_email_address">Change email Address</string>
    <string name="check_saved_payments">Check saved Payments</string>
    <string name="maximum_discount_that_i_can_get_by_using_ans_1">You get a maximum discount of Rs 300 on each booking</string>
    <string name="maximum_discount_that_i_can_get_by_using_ans_2">There\'s no limit on the number of bookings under the membership. But as per our fair usage policy, the total discount you can avail is limited to 8 times the membership price paid.</string>
    <string name="maximum_discount_that_i_can_get_by_using_ans_3">If you don\'t have the easy worker plus membership and want to know more, please click on the below button.</string>
</resources>