<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1EDED"
    app:layout_insetEdge="none"
    tools:context=".FAQIntent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:divider="@null"
        android:dividerPadding="0dp"

        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/place_a_booking"
            android:textColor="#FF272626"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="16dp"

            android:fontFamily="@font/actor"
            android:text="@string/place_a_booking_details"
            android:textColor="#FF272626"

            android:textSize="20sp"

            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"

            android:fontFamily="@font/actor"
            android:text="@string/place_a_booking_detail_no1"
            android:textColor="#FF272626"

            android:textSize="20sp"

            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"

            android:fontFamily="@font/actor"
            android:text="@string/place_a_booking_detail_no2"
            android:textColor="#FF272626"

            android:textSize="20sp"

            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"

            android:fontFamily="@font/actor"
            android:text="@string/place_a_booking_detail_no3"
            android:textColor="#FF272626"

            android:textSize="20sp"

            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"

            android:fontFamily="@font/actor"
            android:text="@string/place_a_booking_detail_no4"
            android:textColor="#FF272626"

            android:textSize="20sp"

            android:textStyle="bold" />




    </LinearLayout>


</RelativeLayout>