<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1EDED"
    app:layout_insetEdge="none"
    tools:context=".FAQIntent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:divider="@null"
        android:dividerPadding="0dp"

        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/maximum_discount_that_i_can_get_by_using"
            android:textColor="#FF272626"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="16dp"


            android:text="@string/maximum_discount_that_i_can_get_by_using_ans_1"
            android:textColor="#FF272626"

            android:textSize="20sp"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="16dp"


            android:text="@string/maximum_discount_that_i_can_get_by_using_ans_2"
            android:textColor="#FF272626"

            android:textSize="20sp"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="16dp"


            android:text="@string/maximum_discount_that_i_can_get_by_using_ans_3"
            android:textColor="#FF272626"

            android:textSize="20sp"

            />









    </LinearLayout>


</RelativeLayout>