<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FAQIntent">
<RelativeLayout
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_insetEdge="none"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#E73C34" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:divider="@null"
        android:dividerPadding="0dp"

        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/getting_start"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical"

            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="30dp"

                android:text="@string/about_us"
                android:textColor="#000000"
                android:textSize="25dp" />


            <LinearLayout
                android:id="@+id/what_is_easy_worker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="12dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_weight="4"
                    android:fontFamily="@font/actor"
                    android:text="@string/what_is_easy_worker"
                    android:textColor="#FF272626"

                    android:textSize="20sp"

                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"

                    android:src="@drawable/baseline_keyboard_arrow_right_black_24dp"
                     />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:layout_marginTop="18dp"
                android:background="#F4F4F4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="12dp"
                android:text="@string/booking"
                android:textColor="#000000"

                android:textSize="25sp" />

            <LinearLayout
                android:id="@+id/place_a_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="10dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_weight="4"
                    android:fontFamily="@font/actor"
                    android:text="@string/place_a_booking"
                    android:textColor="#FF272626"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:src="@drawable/baseline_keyboard_arrow_right_black_24dp" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="18dp"
                android:background="#F4F4F4" />

            <LinearLayout
                android:id="@+id/same_professional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="10dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_weight="4"
                    android:fontFamily="@font/actor"
                    android:text="@string/can_i_rebook_the_same"
                    android:textColor="#FF272626"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:src="@drawable/baseline_keyboard_arrow_right_black_24dp" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="18dp"
                android:background="#F4F4F4" />

            <LinearLayout
                android:id="@+id/book_my_preferred"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="10dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_weight="4"
                    android:fontFamily="@font/actor"
                    android:text="@string/preferred_professional"
                    android:textColor="#FF272626"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:src="@drawable/baseline_keyboard_arrow_right_black_24dp" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="18dp"
                android:background="#F4F4F4" />

            <LinearLayout
                android:id="@+id/minimum_value_of_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="10dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_weight="4"
                    android:fontFamily="@font/actor"
                    android:text="@string/minimum_value_of_service"
                    android:textColor="#FF272626"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:src="@drawable/baseline_keyboard_arrow_right_black_24dp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/cancellation_fees"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="10dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_weight="4"
                    android:fontFamily="@font/actor"
                    android:text="@string/change_any_cancellation_fees"
                    android:textColor="#FF272626"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:src="@drawable/baseline_keyboard_arrow_right_black_24dp" />


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
</ScrollView>